--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,1 +1,7 @@
 <h1>New Owner</h1>
+
+<%= form_for @owner do |f| %>
+<%= f.label "name:" %>
+<%= f.text_field :name %><br />
+  <%= f.submit %>
+<% end %>
