--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,1 +1,11 @@
 <h1>Edit Pet</h1>
+
+<%= form_for @pet do |f| %>
+<%= f.label "name:" %>
+<%= f.text_field :name %><br />
+<%= f.label "Pet type:" %>
+<%= f.text_field :pet_type %><br />
+<%= f.label "Owner:" %>
+<%= f.collection_select :owner_id, Owner.all, :id, :name%>
+  <%= f.submit %>
+<% end %>
