--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -3,6 +3,7 @@
 <ul>
     <% @pets.each do |pet| %>
     <li>
-      <%= link_to pet.name, path_to(pet) %>
+      <%= link_to pet.name, pet_path(pet) %>
     </li>
+    <% end %>
 </ul>
