--- a/app/views/owners/index.html.erb
+++ b/app/views/owners/index.html.erb
@@ -3,7 +3,8 @@
 <ul>
   <% @owners.each do |owner|  %>
     <li>
-      <%= link_to owner.name, owner_path(owner) %>
+      <%= link_to owner.name, owner_path(owner) %> - <%= link_to "Edit", edit_owner_path(owner) %>
     </li>
     <% end %>
 </ul>
+<%= link_to "Create new owner!", new_owner_path %>
