--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,12 @@
 <h1>Index Pets</h1>
 
+<h2>search:</h2>
+<%= form_tag(pets_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Pets Type" %>
+    <%= submit_tag "Search", :name => nil %>
+<% end %>
+
+
 <ul>
     <% @pets.each do |pet| %>
     <li>
