--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @pet.name %></h1>
-
+<h2><%= @pet.pet_type %></h2>
 <%= link_to "Edit", edit_pet_path(@pet) %> <br />
 <%= link_to "Take me to my owner", owner_path(@pet.owner) %><br />
 <%= link_to "<=  Back", owners_path %>
